2025-02-07T01:22:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13191232706 # 558
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-07
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 33 130 / 34 132
* notice: next accum: outdated-unq outdated-all / unq all: 34 132 / 35 134
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-01-13] / [2025-02-06]

2025-01-19T01:27:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12849134296 # 539
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 32 129 / 33 130
* notice: next accum: outdated-unq outdated-all / unq all: 33 130 / 34 132
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-01-02] / [2025-01-13]

2025-01-03T00:38:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12590832930 # 529
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-03
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 30 126 / 32 129
* notice: next accum: outdated-unq outdated-all / unq all: 32 129 / 33 130
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-08-29] / [2025-01-02]

2024-08-30T00:41:34Z: