@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2025-02-07T01:22:57Z",
-  "count_outdated" : 132,
-  "uniques_outdated" : 34,
-  "count" : 134,
-  "uniques" : 35,
+  "timestamp" : "2025-10-06T01:41:02Z",
+  "count_outdated" : 134,
+  "uniques_outdated" : 35,
+  "count" : 135,
+  "uniques" : 36,
   "views" : [
     {
-      "timestamp": "2025-02-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "timestamp": "2025-10-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
