@@ -1,3 +1,12 @@
+2025-10-06T01:41:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18267602877 # 788
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-06
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 34 132 / 35 134
+* notice: next accum: outdated-unq outdated-all / unq all: 35 134 / 36 135
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-02-06] / [2025-10-05]
+
 2025-02-07T01:22:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13191232706 # 558
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-07
